# rag_mgi

./: .gitignore  README.md  app.py  batch_process_rtf.py  docs.md  estrutura.md  hello.py  perguntas-respostas-ANTERIORES-fine-tuning.rtf  perguntas-respostas-fine-tuning.rtf  pyproject.toml  requirements.txt  run.py  run_api.sh  run_chat.sh  s3file.py  stop_services.sh  token_analyzer.py  users.db
api/: rag_api.py
api_2/: rag_api_CEITEC.py  rag_api_IMBEL.py  rag_api_Telebras.py
auth/: auth.py  models.py  users.db  utils.py
chat/: chat.py
chat_2/: chat_2.py
data/: 3D-Printing-in-Military-Applications-FDM-Technology-Materials-and-Implications_2023_University-of-Defence.md  A-Mobilizao-da-base-industrial-de-defesa-na-amrica-do-sul-por-meio-da-insero-brasileira-no-sistema-otan-de-catalogao_2018_Universidade-Federal-do-Rio-Grande-do-Sul-prcrevufrgsbr.MD  A-TOE-approach-to-establish-a-green-supply-chain-adoption-decision-model-in-the-semiconductor-industry_2016_MDPI.md  A-import-ncia-da-interdepend-ncia-no-relacionamento_2014_REGE---Revista-de-G.md  A-percep--o-de-clientes-universit-rios-sobre-o-relacionam_2014_REGE---Revist.md  A-rela--o-entre-a-satisfa--o-dos-funcion-rios-e-a-satisfa--o_2015_Revista-de.md  Análise da descentralização no desenvolvimento de novos produtos- uma investigação em uma empresa do setor de veículos comerciais.md  Análise de Decisões sobre Uso de Tecnologia- um Estudo no Setor de Telefonia Móvel Fundamentado nos Axiomas.md  Avaliação da qualidade de serviços de telefonia móvel- o impacto da nova lei dos callcenters.md  DFP-Telebras-PDF.md  (+77 more)
(+877 files in other folders)
