[project]
name = "rag-mgi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepseek-ai>=0.0.1",
    "gradio>=5.23.2",
    "openai>=1.70.0",
    "python-dotenv>=1.1.0",
    "langchain>=0.3.22",
    "langchain-community>=0.3.20",
    "langchain-deepseek>=0.1.3",
]
